# xroute_env

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
baseline/: baseline_utils.py  build_3Dgrid.py
baseline/A3C/: README.md  count_map.pkl  discrete_A3C.py  shared_optimizer.py  start_train.sh  stop_train.sh  test_A3C.py  utils.py
baseline/A3C/openroad_api/: .gitignore  compile_proto.sh
baseline/DQN/: DQN.py  README.md  inference.py  inference.sh  readme  reboot_inference.py  rlog.sh  start_reboot.sh  stop.sh  test.json  test_DQN.py  train_DQN.py
baseline/PPO/: PPO.py  README.md  inference.py  inference.sh  readme  reboot_inference.py  start_reboot.sh  stop.sh  test_PPO.py  train_PPO.py
baseline/openroad_api/: .gitignore  CMakeLists.txt
baseline/openroad_api/demo/simple_comm/: main.py
baseline/openroad_api/demo/xroute_simulation_platform/: trainer_normal.py
baseline/openroad_api/proto/: net_ordering.proto  net_ordering_pb2.py
baseline/xroute/: README.md  abstract_route.py  diagnose_model.py  message_handler.py  models.py  net_order.py  net_ordering.proto  net_ordering_pb2.py  replay_buffer.py  requirements.txt  self_route.py  trainer.py  xroute.py
baseline/xroute/trainer4/: debugger.py  dispatcher.py  launcher.sh  main.py  mixer.py  test.py
baseline/xroute/xr-11fea-ispd18test1/: init.py
examples/: init.py  launch.py  launch_evaluation.py  launch_inference.py  launch_training.py  training.py
ispd/ispd18_test1/: run-net-ordering-training.tcl
simulator/: Dockerfile  helper.sh  launch.sh  python3  start_container
simulator/api_server/: main.py  test.py
xroute_env/: __init__.py
xroute_env/envs/: __init__.py  core.py  ordering_evaluation_env.py  ordering_training_env.py  static_region_env.py
(+152 files in other folders)
