[build-system]
requires = ["setuptools >= 67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xroute_env"
description = "A standard API for reinforcement learning in detailed routing."
readme = "README.md"
requires-python = ">= 3.9"
license = {text = "BSD-3-Clause"}
keywords = ["Reinforcement Learning", "VLSI", "EDA", "RL", "AI", "detailed routing", "gymnasium"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
]
dependencies = [
    "gymnasium == 0.28.1"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://xplan-lab.org/"
Repository = "https://github.com/xplanlab/xroute_env"
Documentation = "https://github.com/xplanlab/xroute_env"
"Bug Report" = "https://github.com/xplanlab/xroute_env/issues"

[tool.setuptools.packages.find]
include = ["xroute_env", "xroute_env.*"]
